# AIMNet2

./: .gitattributes  .gitignore  Dockerfile_cpu  LICENSE  MANIFEST.in  README.md  aimnet2  pyproject.toml  requirements.txt  setup.py
.github/workflows/: CI.yaml
aimnet2/: __init__.py  _version.py  utils.py
aimnet2/calculators/: aimnet2_sph_opt.py
aimnet2/models/: ensemble.py
aimnet2calc/: __init__.py  aimnet2ase.py  aimnet2pysis.py  calculator.py  ensemble.py  models.py  nblist.py
calculators/: aimnet2_ase_opt.py  aimnet2_sph_opt.py  aimnet2ase.py  aimnet2sph.py  pysis_mod
devtools/conda-envs/: test_env.yaml
docker/: Dockerfile_cpu
pyaimnet2/: __init__.py  _version.py  utils.py
pyaimnet2/calculators/: aimnet2_ase_opt.py  aimnet2_sph_opt.py  aimnet2ase.py  aimnet2sph.py
pyaimnet2/models/: ensemble.py
pyaimnet2/tests/: conftest.py  test_models.py
scripts/: pysis_mod
setup/: install_docker.sh  setup_aimnet.sh
test/: 1008775.cif  mol_single.xyz  mol_single_opt.yml  mols_size_36.xyz  mols_size_var.xyz  test_calculator.py
